# wikigen

./: README.md  stack.yaml  wikigen.cabal
app/: Main.hs
src/: Markdown.hs  Template.hs  Types.hs  Wikigen.hs
src/Text/: Wikigen.hs
src/Text/Wikigen/: Markdown.hs  Template.hs  Types.hs  Wikigen.hs
test/files/: test.md
