name:                wikigen
version:             0.1.0.0
synopsis:            A minimal static wiki generator
description:         Please see README.md
homepage:            https://github.com/Hackerswiki/wikigen
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           2016 Inokentiy Babushkin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wikigen
  build-depends:       base >= 4.7 && < 5
                     , markdown >= 0.1.14
                     , text >= 1.2.2.1
                     , blaze-html >= 0.8.1.1
                     , highlighter >= 0.2.2
  default-language:    Haskell2010

executable wikigen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wikigen
  default-language:    Haskell2010

test-suite wikigen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wikigen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Hackerswiki/wikigen
